# oauth2

./: .gitignore  Makefile  README.md  migrations.py  mypy.ini  pyproject.toml  start.py
.github/workflows/: docker-build.yaml  test.yaml
alembic/: env.py
alembic/versions/: 3326d4bfb7c3_.py
app/: endpoints.py  settings.py
app/api/: routes.py
app/crud/: __init__.py  authorization.py  authorization_code_crud.py  authorization_request_crud.py  client.py  client_crud.py  clients.py  oauth_authorization_code.py  oauth_authorization_request.py  otp.py  otp_crud.py  session.py  session_crud.py  user.py  user_crud.py  users.py
app/db/: __init__.py  sqlalchemy_engine.py  sqlalchemy_manager.py  sqlalchemy_session.py
app/endpoints/: auth.py  client.py  health.py  login.py  user.py
app/exceptions/: domain.py  handlers.py  http.py
app/helpers/: _security.py
app/models/: __init__.py  authorization.py  base.py  client.py  enums.py  oauth.py  otp.py  session.py  user.py
app/routes/: client.py  health.py  oauth.py  user.py
app/schemas/: __init__.py  _base.py  authorization.py  base.py  client.py  consent.py  otp.py  session.py  token.py  user.py
app/security/: __init__.py  dependencies.py  encryption.py  json_web_token.py  permissions.py
app/services/: __init__.py  client_service.py  clients.py  oauth_service.py  otp.py  session_service.py  user_service.py  user_verification_service.py  users.py
app/utils/: __init__.py  datetime.py  devices.py  exceptions.py  log.py  (+2 more)
docs/: openapi.json
fastapi_oauth2_service/: settings.py
recipes/: create-admin.py  create-clients.py
scripts/: create-admin.py  create-client.py  cron-cleanup.py
tests/: conftest.py  test_auth.py  test_schemas_user.py
(+20 files in other folders)
