[tool.poetry]
name = "oauth2"
version = "0.1.0"
description = "That's an authentification service backend based on oauth2"
authors = ["abdoulfataoh <abdoulfataoh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
environs = "^11.0.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pyjwt = "^2.8.0"
types-pytz = "^2024.1.0.20240417"
aiosqlite = "^0.20.0"
requests = "^2.32.3"
sqlalchemy = "^2.0.46"
fastapi = {extras = ["standard"], version = "^0.128.0"}
argon2-cffi = "^25.1.0"
greenlet = "^3.3.2"
user-agents = "^2.2.0"
phonenumbers = "^9.0.27"
alembic = "^1.18.4"


[tool.poetry.group.dev.dependencies]
ipython = "^8.26.0"
mypy = "^1.11.0"
flake8 = "^7.1.0"
types-passlib = "^1.7.7.20240327"
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
